build version magestore/compose for noodle

--- a/compose/Dockerfile
+++ b/compose/Dockerfile
@@ -4,6 +4,7 @@ RUN apk add curl \
     && apk add git \
     && apk add nodejs \
     && apk add nodejs-npm \
+    && apk add python \
     && rm -rf /var/cache/apk/*
 
 ENTRYPOINT [ "tail", "-f", "/dev/null" ]
