ad make and gcc

--- a/compose/Dockerfile
+++ b/compose/Dockerfile
@@ -5,6 +5,8 @@ RUN apk add curl \
     && apk add nodejs \
     && apk add nodejs-npm \
     && apk add python \
+    && apk add make \
+    && apk add gcc \
     && rm -rf /var/cache/apk/*
 
 ENTRYPOINT [ "tail", "-f", "/dev/null" ]
